[gd_scene load_steps=2 format=3 uid="uid://d37klk05qjgt2"]

[ext_resource type="Script" path="res://script/viewer.gd" id="1_b8vrh"]

[node name="Viewer" type="PanelContainer"]
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0
script = ExtResource("1_b8vrh")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HSplitContainer" type="HSplitContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TextPanel" type="PanelContainer" parent="MarginContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/TextPanel"]
layout_mode = 2

[node name="title" type="TextEdit" parent="MarginContainer/HSplitContainer/TextPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.1
theme_override_font_sizes/font_size = 24
placeholder_text = "文件名"
editable = false

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/HSplitContainer/TextPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="message" type="TextEdit" parent="MarginContainer/HSplitContainer/TextPanel/VBoxContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 5.0
theme_override_font_sizes/font_size = 24
placeholder_text = "信息"
editable = false

[node name="secretKey" type="TextEdit" parent="MarginContainer/HSplitContainer/TextPanel/VBoxContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
placeholder_text = "密钥"

[node name="ButtonPanel" type="PanelContainer" parent="MarginContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HSplitContainer/ButtonPanel"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20
alignment = 1

[node name="publicKey" type="TextEdit" parent="MarginContainer/HSplitContainer/ButtonPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
placeholder_text = "公钥"
editable = false

[node name="encryptText" type="TextEdit" parent="MarginContainer/HSplitContainer/ButtonPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
placeholder_text = "加密方式"
editable = false

[node name="encrypt" type="Button" parent="MarginContainer/HSplitContainer/ButtonPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "加密数据"

[node name="decode" type="Button" parent="MarginContainer/HSplitContainer/ButtonPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "解密数据"

[connection signal="pressed" from="MarginContainer/HSplitContainer/ButtonPanel/VBoxContainer/encrypt" to="." method="button_encrypt"]
[connection signal="pressed" from="MarginContainer/HSplitContainer/ButtonPanel/VBoxContainer/decode" to="." method="button_decode"]
